// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Snapshots renders correctly with bottom position 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-end justify-center pb-10"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Bottom Modal
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly with custom ID 1`] = `
<div
  aria-describedby="custom-modal-id-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-live="polite"
    className="sr-only"
  >
    Dialog geöffnet
  </div>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="custom-modal-id"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="custom-modal-id-body"
      >
        <p>
          Modal with custom ID
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly with custom className 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn custom-class  "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Modal with custom class
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly with default props 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Modal Content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly with footer 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-labelledby="modal-f4bipx4bi-title"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <h3
          className="text-lg font-medium text-gray-900 dark:text-white"
          id="modal-f4bipx4bi-title"
        >
          Test Modal
        </h3>
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Modal Content
        </p>
      </div>
      <div
        className="border-t border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button>
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly with large size 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-lg shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Large Modal
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly with multiple props combined 1`] = `
<div
  aria-describedby="combined-modal-body"
  aria-labelledby="combined-modal-title"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity  "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-start justify-center pt-10"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-lg shadow-xl rounded-lg border border-gray-200 dark:border-gray-700  custom-class  "
      data-testid="modal-content"
      id="combined-modal"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 header-class"
      >
        <h3
          className="text-lg font-medium text-gray-900 dark:text-white"
          id="combined-modal-title"
        >
          Combined Modal
        </h3>
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 body-class"
        data-testid="modal-body"
        id="combined-modal-body"
      >
        <p>
          Modal with multiple props
        </p>
      </div>
      <div
        className="border-t border-gray-200 dark:border-gray-700 px-6 py-4 footer-class"
      >
        <button>
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly with small size 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-live="polite"
    className="sr-only"
  >
    Dialog geöffnet
  </div>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-sm shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Small Modal
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly with title 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-labelledby="modal-f4bipx4bi-title"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-live="polite"
    className="sr-only"
  >
    Dialog geöffnet
  </div>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <h3
          className="text-lg font-medium text-gray-900 dark:text-white"
          id="modal-f4bipx4bi-title"
        >
          Test Modal
        </h3>
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Modal Content
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly with top position 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-live="polite"
    className="sr-only"
  >
    Dialog geöffnet
  </div>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-start justify-center pt-10"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Top Modal
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly without animation 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity  "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg border border-gray-200 dark:border-gray-700    "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Modal without animation
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly without border 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-live="polite"
    className="sr-only"
  >
    Dialog geöffnet
  </div>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg  animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Modal without border
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly without close button 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-live="polite"
    className="sr-only"
  >
    Dialog geöffnet
  </div>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Modal without close button
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly without rounded corners 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md shadow-xl  border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Modal without rounded corners
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Snapshots renders correctly without shadow 1`] = `
<div
  aria-describedby="modal-f4bipx4bi-body"
  aria-modal="true"
  className="fixed inset-0 z-50 overflow-y-auto "
  role="dialog"
>
  <div
    aria-live="polite"
    className="sr-only"
  >
    Dialog geöffnet
  </div>
  <div
    aria-hidden="true"
    className="fixed inset-0 bg-black bg-opacity-50 transition-opacity animate-fadeIn "
    data-testid="modal-overlay"
    onClick={[Function]}
  />
  <div
    className="flex min-h-screen p-4 items-center justify-center"
  >
    <div
      className="relative bg-white dark:bg-gray-800 text-left transform transition-all w-full max-w-md  rounded-lg border border-gray-200 dark:border-gray-700 animate-scaleIn   "
      data-testid="modal-content"
      id="modal-f4bipx4bi"
      onClick={[Function]}
      style={{}}
      tabIndex={-1}
    >
      <div
        className="border-b border-gray-200 dark:border-gray-700 px-6 py-4 "
      >
        <button
          aria-label="Schließen"
          className="absolute top-3 right-3 text-gray-400 hover:text-gray-500 dark:hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-primary-500"
          data-testid="modal-close-button"
          onClick={[Function]}
          type="button"
        >
          <span
            className="sr-only"
          >
            Schließen
          </span>
          <svg
            aria-hidden="true"
            className="h-6 w-6"
            fill="none"
            stroke="currentColor"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 18L18 6M6 6l12 12"
              strokeLinecap="round"
              strokeLinejoin="round"
              strokeWidth="2"
            />
          </svg>
        </button>
      </div>
      <div
        className="p-6 "
        data-testid="modal-body"
        id="modal-f4bipx4bi-body"
      >
        <p>
          Modal without shadow
        </p>
      </div>
    </div>
  </div>
</div>
`;
